--- a/evilwoods-server/ansible/roles/immich/vars/main.yml
+++ b/evilwoods-server/ansible/roles/immich/vars/main.yml
@@ -1,11 +1,24 @@
 immich_app_name: "{{ ansible_role_name }}"
-immich_url: "https://{{ immich_app_name }}.{{ evilwoods_domain_name }}"
-immich_volume_path: "{{ evilwoods_data_path }}/immich"
-immich_db_data_volume: "{{ immich_volume_path }}/db_data"
-immich_upload_volume: "{{ immich_volume_path }}/uploads"
-immich_config_volume: "{{ immich_volume_path }}/config"
-immich_settings_path: "/etc/immich"
+immich_service_name: "{{ immich_app_name }}"
+immich_container_name: "{{ evilwoods_container_name_prefix }}-{{ immich_app_name }}-server"
+immich_pod_name: "{{ evilwoods_container_name_prefix }}-{{ immich_app_name }}"
+immich_url: "{{ immich_app_name }}.{{ evilwoods_domain_name }}"
 immich_version: "1.131.3"
+immich_image: "ghcr.io/immich-app/immich-server:v{{ immich_version }}"
+immich_machine_learning_image: "ghcr.io/immich-app/immich-machine-learning:v{{ immich_version }}"
+immich_postgresql_image: "docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0"
+immich_valkey_image: "docker.io/valkey/valkey:8-alpine"
+immich_volume_path: "{{ evilwoods_unnamed_volumes }}/immich"
+immich_model_cache_volume: "{{ immich_app_name }}-model-cache.volume"
+immich_uploads_volume: "{{ immich_app_name }}-uploads.volume"
+immich_config_volume: "{{ immich_volume_path }}/config"
+immich_valkey_volume: "{{ immich_app_name }}-valkey-data.volume"
+immich_postgresql_volume: "{{ immich_app_name }}-postgresql-data.volume"
+immich_settings_path: "/etc/immich"
+immich_settings_file: "immich.json"
+
+immich_valkey_container_name: "{{ evilwoods_container_name_prefix }}-{{ immich_app_name }}-valkey"
+immich_postgresql_container_name: "{{ evilwoods_container_name_prefix }}-{{ immich_app_name }}-postgresql"
 
 immich_db_password: "immich"
 immich_db_user: "immich"
