--- a/evilwoods-server/ansible/roles/searxng/vars/main.yml
+++ b/evilwoods-server/ansible/roles/searxng/vars/main.yml
@@ -1,4 +1,9 @@
 searxng_app_name: "{{ ansible_role_name }}"
+searxng_pod_name: "{{ evilwoods_container_name_prefix }}-{{ searxng_app_name }}"
+searxng_service_name: "{{ searxng_app_name }}"
+searxng_valkey_name: "{{ evilwoods_container_name_prefix }}-{{ searxng_app_name }}-valkey"
+searxng_image: "docker.io/searxng/searxng:latest"
+searxng_valkey_image: "docker.io/valkey/valkey:8.1-alpine"
 searxng_port: "{{ Evilwoods_server_port }}"
-searxng_data_path: "{{ evilwoods_data_path }}/searxng"
-searxng_url: "https://search.{{ evilwoods_domain_name }}"
+searxng_volume_path: "{{ evilwoods_unnamed_volumes }}/searxng"
+searxng_url: "search.{{ evilwoods_domain_name }}"
