--- a/evilwoods-server/ansible/roles/cloudflared/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/cloudflared/tasks/main.yml
@@ -1,13 +1,13 @@
-- name: Copy cloudflared secret retrieval service
+- name: "Copy secret retrieval service for {{ cloudflared_app_name | upper }}"
   ansible.builtin.template:
-    src: "cloudflared-get-secret.service.jinja"
-    dest: "{{ evilwoods_runner_unit_file_path }}/cloudflared-get-secret.service"
+    src: "{{ cloudflared_app_name }}-get-secret.service.j2"
+    dest: "{{ evilwoods_unit_file_path }}/{{ cloudflared_app_name }}-get-secret.service"
     mode: "0644"
-  notify: Restart Cloudflared
+  notify: "Restart {{ cloudflared_service_name }}"
 
-- name: Copy Cloudflared service quadlet file
+- name: "Copy service quadlet file or {{ cloudflared_app_name | upper }}"
   ansible.builtin.template:
-    src: "cloudflared.container.jinja"
-    dest: "{{ evilwoods_quadlet_path }}/cloudflared.container"
+    src: "{{ cloudflared_app_name }}.container.j2"
+    dest: "{{ evilwoods_quadlet_path }}/{{ cloudflared_app_name }}.container"
     mode: "0644"
-  notify: Restart Cloudflared
+  notify: Restart {{ cloudflared_service_name }}
