--- a/evilwoods-server/ansible/roles/searxng/tasks/main.yml
+++ b/evilwoods-server/ansible/roles/searxng/tasks/main.yml
@@ -1,57 +1,40 @@
-- name: Ensure searxng data directory exists
+- name: Ensure searxng volume directory exists
   ansible.builtin.file:
-    path: "{{ searxng_data_path }}"
+    path: "{{ searxng_volume_path }}"
     state: directory
     mode: "0755"
 
 - name: Copy secret retrieval service file
   ansible.builtin.template:
-    src: searxng-get-secrets.service.jinja
-    dest: "{{ evilwoods_runner_unit_file_path }}/searxng-get-secrets.service"
+    src: searxng-get-secrets.service.j2
+    dest: "{{ evilwoods_unit_file_path }}/searxng-get-secrets.service"
     mode: "0644"
   notify:
-    - Restart searxng-pod
+    - "Restart {{ searxng_app_name }}-pod"
 
-- name: Copy Valkey quadlet
+- name: Copy quadlet files
   ansible.builtin.template:
-    src: searxng-valkey.container.jinja
-    dest: "{{ evilwoods_quadlet_path }}/valkey.container"
+    src: "{{ item }}.j2"
+    dest: "{{ evilwoods_quadlet_path }}/{{ item }}"
     mode: "0644"
+  loop:
+    - "{{ searxng_app_name }}-valkey.container"
+    - "{{ searxng_app_name }}-valkey-data.volume"
+    - "{{ searxng_app_name }}.pod"
+    - "{{ searxng_app_name }}-server.container"
   notify:
-    - Restart searxng-pod
-
-- name: Copy valkey volume quadlet
-  ansible.builtin.template:
-    src: searxng-valkey-data.volume.jinja
-    dest: "{{ evilwoods_quadlet_path }}/valkey_data.volume"
-    mode: "0644"
-  notify:
-    - Restart searxng-pod
+    - "Restart {{ searxng_app_name }}-pod"
 
 - name: Copy settings file to searxng volume
   ansible.builtin.template:
-    src: settings.yml.jinja
-    dest: "{{ searxng_data_path }}/settings.yml"
+    src: "{{ searxng_app_name }}-settings.yml.j2"
+    dest: "{{ searxng_volume_path }}/settings.yml"
     mode: "0644"
-  notify: Restart searxng-pod
-
-- name: Copy searxng pod file
-  ansible.builtin.template:
-    src: searxng.pod.jinja
-    dest: "{{ evilwoods_quadlet_path }}/searxng.pod"
-    mode: "0644"
-  notify: Restart searxng-pod
-
-- name: Copy searxng container file
-  ansible.builtin.template:
-    src: searxng.container.jinja
-    dest: "{{ evilwoods_quadlet_path }}/searxng.container"
-    mode: "0644"
-  notify: Restart searxng-pod
+  notify: "Restart {{ searxng_app_name }}-pod"
 
 - name: Copy searxng caddy config
   ansible.builtin.template:
-    src: searxng.caddyfile.jinja
-    dest: "{{ evilwoods_caddy_volume_service_path }}/searxng.caddyfile"
+    src: searxng.caddyfile.j2
+    dest: "{{ evilwoods_caddy_service_config_path }}/searxng.caddyfile"
     mode: "0644"
-  notify: Restart caddy
+  notify: "Restart {{ evilwoods_caddy_service_name }}"
