--- a/evilwoods-server/ansible/setup-evilcloud-playbook.yml
+++ b/evilwoods-server/ansible/setup-evilcloud-playbook.yml
@@ -41,3 +41,9 @@
       tags:
         - kitchenowl
         - roles
+    - role: fusion
+      become_user: "{{ evilwoods_runner_user }}"
+      become: true
+      tags:
+        - fusion
+        - roles
