--- a/evilwoods-server/ansible/setup-evilcloud-playbook.yml
+++ b/evilwoods-server/ansible/setup-evilcloud-playbook.yml
@@ -47,3 +47,9 @@
       tags:
         - fusion
         - roles
+    - role: authelia
+      become_user: "{{ evilwoods_runner_user }}"
+      become: true
+      tags:
+        - authelia
+        - roles
