--- a/evilwoods-server/ansible/roles/searxng/vars/main.yml
+++ b/evilwoods-server/ansible/roles/searxng/vars/main.yml
@@ -5,5 +5,5 @@ searxng_valkey_name: "{{ evilwoods_container_name_prefix }}-{{ searxng_app_name 
 searxng_image: "docker.io/searxng/searxng:latest"
 searxng_valkey_image: "docker.io/valkey/valkey:8.1-alpine"
 searxng_port: "{{ Evilwoods_server_port }}"
-searxng_volume_path: "{{ evilwoods_unnamed_volumes }}/searxng"
+searxng_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ searxng_app_name }}"
 searxng_url: "search.{{ evilwoods_domain_name }}"
