--- a/evilwoods-server/ansible/group_vars/evilwoods.yml
+++ b/evilwoods-server/ansible/group_vars/evilwoods.yml
@@ -7,25 +7,25 @@ evilwoods_unnamed_volumes: "{{ evilwoods_volumes }}/unnamed"
 evilwoods_quadlet_path: "{{ evilwoods_runner_home }}/.config/containers/systemd"
 evilwoods_unit_file_path: "{{ evilwoods_runner_home }}/.config/systemd/user"
 evilwoods_runner_bw_config_path: "{{ evilwoods_runner_home }}/.config/bws"
-
+evilwoods_container_name_prefix: systemd
 evilwoods_domain_name: "{{ evilcloud_domain }}"
-
-evilwoods_caddy_volume_path: "{{ evilwoods_unnamed_volumes }}/caddy"
-evilwoods_caddy_config_volume: "{{ evilwoods_caddy_volume_path }}/config"
-evilwoods_caddy_service_config_path: "{{ evilwoods_caddy_config_volume }}/services"
-evilwoods_nextcloud_data_volume: "{{ evilwoods_data_path }}/nextcloud/data"
-
 evilwoods_container_network: evilcloud
 evilwoods_container_subnet_prefix: "10.200.0"
 evilwoods_container_subnet: "{{ evilwoods_container_subnet_prefix }}.0/24"
 evilwoods_container_gateway: "{{ evilwoods_container_subnet_prefix }}.1"
 evilwoods_container_ip_range: "{{ evilwoods_container_subnet_prefix }}.100-{{ evilwoods_container_subnet_prefix }}.200"
-evilwoods_caddy_ip: "{{ evilwoods_container_subnet_prefix }}.2"
 
-# TODO: minimize hardcoded values in container names
-evilwoods_container_name_prefix: systemd
-
+evilwoods_caddy_volume_path: "{{ evilwoods_unnamed_volumes }}/caddy"
+evilwoods_caddy_config_volume: "{{ evilwoods_caddy_volume_path }}/config"
+evilwoods_caddy_service_config_path: "{{ evilwoods_caddy_config_volume }}/services"
 evilwoods_caddy_service_name: "caddy"
 evilwoods_caddy_container_name: "{{ evilwoods_container_name_prefix }}-{{ evilwoods_caddy_service_name }} "
+evilwoods_caddy_ip: "{{ evilwoods_container_subnet_prefix }}.2"
+
+evilwoods_authelia_app_name: "authelia"
+evilwoods_authelia_container_name: "{{ evilwoods_container_name_prefix }}-{{ evilwoods_authelia_app_name }}"
+
+# TODO: minimize hardcoded values in container names
 
 evilwoods_nextcloud_volume: "nextcloud.volume"
+evilwoods_nextcloud_data_volume: "{{ evilwoods_data_path }}/nextcloud/data"
