--- a/evilwoods-server/ansible/inventory-dev.yml
+++ b/evilwoods-server/ansible/inventory-dev.yml
@@ -12,3 +12,4 @@ evilwoods:
       authelia_storage_encryption_key_id: "bad501ea-0a9a-49be-8625-b2d40142ca3b"
       authelia_notifier_smtp_password_id: "97b6b871-5ae6-4fab-80e3-b2d4014700bc"
       authelia_oidc_hmac_secret_id: "a202abfc-e3cf-4ac0-a80d-b2db015b8b36"
+      authelia_oidc_jwks_private_key_id: "578df320-2990-48fc-8a6b-b2de00e6d489"
