--- a/ansible/roles/caddy/tasks/main.yml
+++ b/ansible/roles/caddy/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: "Pull caddy image."
   containers.podman.podman_image:
-    name: "{{ evilwoods_caddy_image }}"
+    name: "{{ caddy_image }}"
     state: present
 
 - name: "Copy configuration file for {{ caddy_app_name | upper }}"
