--- a/ansible/roles/crunner/tasks/main.yml
+++ b/ansible/roles/crunner/tasks/main.yml
@@ -33,3 +33,8 @@
     group: "{{ evilwoods_runner_user }}"
     mode: "0644"
   when: not linger_check.stat.exists
+
+- name: Reboot the host
+  ansible.builtin.reboot:
+    reboot_timeout: 300
+    msg: "Rebooting to apply changes"
