change mount dir name
Kitchenowl fails to start with oidc provider configured if kitchenowl
cannot validate ssl certificates. This commit creates an image with
letsencryps staging root CAs in it.

--- a/bootc/evilwoods-server/config/usr/etc/tmpfiles.d/storage-directory.conf
+++ b/bootc/evilwoods-server/config/usr/etc/tmpfiles.d/storage-directory.conf
@@ -1,2 +1,2 @@
-d /var/home/crunner/data 0755 crunner crunner
-Z /var/home/crunner/data 0755 crunner crunner
+d /var/home/crunner/storage 0755 crunner crunner
+Z /var/home/crunner/storage 0755 crunner crunner
